--- a/src/components/styles/Containers.css
+++ b/src/components/styles/Containers.css
@@ -14,6 +14,14 @@
     color: yellow;
 }
 
+.session_container{
+    display: flex;
+    justify-content: center;
+    margin-left: 100px;
+    background-color: blue;
+    color: yellow;
+}
+
 .body_container{
     display: flex;
     width: 100%;
