bookcrossing/solved-sending-props-to-components

--- a/src/components/styles/Containers.css
+++ b/src/components/styles/Containers.css
@@ -15,9 +15,8 @@
 }
 
 .session_container{
-    display: flex;
     justify-content: center;
-    margin-left: 100px;
+    margin-left: 50%;
     background-color: blue;
     color: yellow;
 }
