--- a/src/components/styles/Buttons.css
+++ b/src/components/styles/Buttons.css
@@ -5,3 +5,9 @@
     justify-content: center;
     align-content: center;
 }
+
+.select_button{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
