--- a/src/components/styles/Containers.css
+++ b/src/components/styles/Containers.css
@@ -22,6 +22,15 @@
     color: white;
 }
 
+.title_match_container{
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    border: 1px solid #000000;
+    background-color: black;
+    color: white;
+}
+
 .session_container{
     margin-left: 25%;
     background-color: #292775;
